--- a/index.html
+++ b/index.html
@@ -3,47 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Push Back Practice Dashboard</title>
-
 <style>
 body { font-family: Arial, sans-serif; padding: 20px; }
 button, select, input { padding: 6px; margin: 4px; }
 
-table {
-  border-collapse: collapse;
-  width: 100%;
-  margin-top: 15px;
-}
-
-th, td {
-  border: 1px solid #ccc;
-  padding: 6px;
-  text-align: center;
-}
-
+table { border-collapse: collapse; width: 100%; margin-top: 15px; }
+th, td { border: 1px solid #ccc; padding: 6px; text-align: center; }
 th { background: #eee; }
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
 
-#fieldContainer {
-  position: relative;
-  width: 900px;
-  height: 900px;
-  margin-top: 20px;
-}
-
-#fieldImage {
-  width: 100%;
-  height: 100%;
-  display: block;
-  pointer-events: none; /* IMPORTANT */
-}
-
-#fieldCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  cursor: crosshair;
-}
+#fieldContainer { position: relative; width: 900px; height: 900px; margin-top: 20px; }
+#fieldImage { width: 100%; height: 100%; display: block; pointer-events: none; }
+#fieldCanvas { position: absolute; top: 0; left: 0; cursor: crosshair; }
 </style>
 </head>
 
@@ -63,7 +35,7 @@ th { background: #eee; }
 <hr>
 
 <label>Mode:</label>
-<select id="mode" onchange="renderResults()">
+<select id="mode" onchange="renderResults(); drawPaths();">
   <option value="driver">Driver</option>
   <option value="auton">Auton</option>
 </select>
@@ -71,7 +43,7 @@ th { background: #eee; }
 <br><br>
 
 <label>Section:</label>
-<select id="sectionSelect"></select>
+<select id="sectionSelect" onchange="loadSectionPaths()"></select>
 
 <button onclick="startSection()">Start</button>
 <button onclick="stopSection()">Stop</button>
@@ -102,10 +74,9 @@ th { background: #eee; }
 
 <script>
 /* ---------- DATA ---------- */
-let sections = JSON.parse(localStorage.getItem("sections")) || [
-  { name:"Start to Goal", distance:1 }
-];
+let sections = JSON.parse(localStorage.getItem("sections")) || [{ name:"Start to Goal", distance:1 }];
 let runs = JSON.parse(localStorage.getItem("runs")) || { driver:{}, auton:{} };
+let pathsPerSection = JSON.parse(localStorage.getItem("pathsPerSection")) || {};
 
 let startTime=null, timerInterval=null, activeSection=null;
 
@@ -113,6 +84,7 @@ let startTime=null, timerInterval=null, activeSection=null;
 renderSectionSetup();
 renderSectionDropdown();
 renderResults();
+loadSectionPaths();
 
 /* ---------- SECTION SETUP ---------- */
 function renderSectionSetup(){
@@ -122,13 +94,13 @@ function renderSectionSetup(){
     const r=t.insertRow();
     const n=document.createElement("input");
     n.value=s.name;
-    n.onchange=()=>{sections[i].name=n.value;save();};
+    n.onchange=()=>{sections[i].name=n.value; save();};
     const d=document.createElement("input");
     d.type="number"; d.step="0.01"; d.value=s.distance;
-    d.onchange=()=>{sections[i].distance=parseFloat(d.value);save();};
+    d.onchange=()=>{sections[i].distance=parseFloat(d.value)||1; save();};
     const del=document.createElement("button");
     del.textContent="🗑";
-    del.onclick=()=>{sections.splice(i,1);save();};
+    del.onclick=()=>{ sections.splice(i,1); delete pathsPerSection[i]; save(); };
     r.insertCell().appendChild(n);
     r.insertCell().appendChild(d);
     r.insertCell().appendChild(del);
@@ -143,11 +115,13 @@ function addSection(){
 function save(){
   localStorage.setItem("sections",JSON.stringify(sections));
   localStorage.setItem("runs",JSON.stringify(runs));
+  localStorage.setItem("pathsPerSection",JSON.stringify(pathsPerSection));
   renderSectionSetup();
   renderSectionDropdown();
   renderResults();
 }
 
+/* ---------- DROPDOWN ---------- */
 function renderSectionDropdown(){
   const s=document.getElementById("sectionSelect");
   s.innerHTML="";
@@ -156,12 +130,14 @@ function renderSectionDropdown(){
     o.value=i; o.textContent=sec.name;
     s.appendChild(o);
   });
+  if(activeSection===null && sections.length) activeSection=0;
+  document.getElementById("sectionSelect").value=activeSection;
 }
 
 /* ---------- TIMER ---------- */
 function startSection(){
   if(timerInterval) return;
-  activeSection=sectionSelect.value;
+  activeSection=parseInt(document.getElementById("sectionSelect").value);
   startTime=performance.now();
   timerInterval=setInterval(()=>{
     document.getElementById("timer").textContent=
@@ -175,9 +151,9 @@ function stopSection(){
   timerInterval=null;
   const t=(performance.now()-startTime)/1000;
   const m=document.getElementById("mode").value;
-  runs[m][activeSection]??=[];
+  runs[m][activeSection] = runs[m][activeSection] || [];
   runs[m][activeSection].push(t);
-  localStorage.setItem("runs",JSON.stringify(runs));
+  save();
   renderResults();
 }
 
@@ -188,34 +164,38 @@ function renderResults(){
   const m=document.getElementById("mode").value;
   sections.forEach((s,i)=>{
     const data=runs[m][i]||[];
-    const best=data.length?Math.min(...data):0;
+    const best=data.length?Math.min(...data):null;
     const cur=data.length?data[data.length-1]:null;
     const r=tb.insertRow();
     r.insertCell().textContent=s.name;
-    r.insertCell().textContent=best.toFixed(2);
-    r.insertCell().textContent=cur?cur.toFixed(2):"—";
+    r.insertCell().textContent=best!==null?best.toFixed(2):"—";
+    r.insertCell().textContent=cur!==null?cur.toFixed(2):"—";
     const d=r.insertCell();
-    d.textContent=cur?(cur-best).toFixed(2):"—";
-    d.className=cur&&cur<=best?"good":"bad";
-    r.insertCell().textContent=cur?(s.distance/cur).toFixed(2):"—";
+    d.textContent=(cur!==null && best!==null)?(cur-best).toFixed(2):"—";
+    d.className=(cur!==null && best!==null && cur<=best)?"good":"bad";
+    r.insertCell().textContent=cur!==null?(s.distance/cur).toFixed(2):"—";
     const del=document.createElement("button");
     del.textContent="🗑";
-    del.onclick=()=>{data.pop();renderResults();};
+    del.onclick=()=>{
+      if(data.length) data.pop();
+      save();
+    };
     r.insertCell().appendChild(del);
   });
+  drawPaths(); // redraw to highlight best path
 }
 
-/* ---------- PATH DRAWING (FIXED + NUMBERED) ---------- */
+/* ---------- PATH DRAWING ---------- */
 const canvas=document.getElementById("fieldCanvas");
 const ctx=canvas.getContext("2d");
 
-let paths=[];
-let currentPath=null;
+let paths=[], currentPath=null;
 
 canvas.addEventListener("mousedown",e=>{
   const r=canvas.getBoundingClientRect();
   currentPath=[{x:e.clientX-r.left,y:e.clientY-r.top}];
   paths.push(currentPath);
+  savePaths();
 });
 
 canvas.addEventListener("mousemove",e=>{
@@ -223,6 +203,7 @@ canvas.addEventListener("mousemove",e=>{
   const r=canvas.getBoundingClientRect();
   currentPath.push({x:e.clientX-r.left,y:e.clientY-r.top});
   drawPaths();
+  savePaths();
 });
 
 canvas.addEventListener("mouseup",()=>{currentPath=null;});
@@ -231,19 +212,38 @@ function drawPaths(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   ctx.lineWidth=3;
   ctx.font="20px Arial";
-  ctx.fillStyle="red";
+
+  const m=document.getElementById("mode").value;
+  const data=runs[m][activeSection]||[];
+  const bestIndex=data.indexOf(Math.min(...data));
 
   paths.forEach((p,i)=>{
+    // highlight best path
+    ctx.strokeStyle = (i===bestIndex) ? "green" : "blue";
+    ctx.fillStyle = (i===bestIndex) ? "green" : "red";
+
     ctx.beginPath();
     p.forEach((pt,j)=>j?ctx.lineTo(pt.x,pt.y):ctx.moveTo(pt.x,pt.y));
-    ctx.strokeStyle="blue";
     ctx.stroke();
-    ctx.fillText(i+1,p[0].x+5,p[0].y-5);
+    ctx.fillText(i+1, p[0].x+5, p[0].y-5); // numbered labels
   });
 }
 
 function clearPaths(){
   paths=[];
+  savePaths();
+  drawPaths();
+}
+
+function savePaths(){
+  if(activeSection===null) return;
+  pathsPerSection[activeSection]=paths;
+  localStorage.setItem("pathsPerSection",JSON.stringify(pathsPerSection));
+}
+
+function loadSectionPaths(){
+  activeSection=parseInt(document.getElementById("sectionSelect").value);
+  paths = pathsPerSection[activeSection] || [];
   drawPaths();
 }
 </script>
